# rycraft

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  README.md  meson.build
.claude/skills/perf-review/: SKILL.md
.claude/skills/playtest/: SKILL.md
.claude/skills/render-review/: SKILL.md
.github/workflows/: ci.yml
ci/: macos-arm64.ini  run-trace-routes.sh  run-v4-capture.sh
docs/: architecture.md  code-conventions.md  game-concept.md  generator-v4-follow-up.md  performance-conventions.md  rendering-conventions.md  world-generation.md
include/audio/: audio_engine.hpp  sfx.hpp  thunder.hpp
include/common/: counter_rng.hpp  ema.hpp  error.hpp  math.hpp  random.hpp  result.hpp  thread_pool.hpp  thread_priority.hpp  trace.hpp
include/engine/: application_termination.hpp  camera.hpp  engine.hpp  game_state.hpp  hotbar.hpp  input.hpp  input_bindings.hpp  inventory.hpp  mining.hpp  playtest_fixture.hpp  slot_interaction.hpp  survival.hpp  v4_world_startup.hpp
include/entity/: ai.hpp  boat.hpp  entity.hpp  entity_picking.hpp  item_entity.hpp  physics.hpp  player.hpp  spatial_hash.hpp  spawner.hpp  voxel_traversal.hpp
include/render/: atmosphere.hpp  atmospheric_memory.hpp  block_texture_array.hpp  block_textures.hpp  bloom.hpp  boat_renderer.hpp  celestial.hpp  cloud_renderer.hpp  dynamic_object_lighting.hpp  entity_renderer.hpp  far_terrain.hpp  frame_ring.hpp  gpu_timer.hpp  graphics_settings.hpp  item_entity_renderer.hpp  lightning_renderer.hpp  lod_mesher.hpp  mega_buffer.hpp  mesh_scheduler.hpp  mesher.hpp  metal_ownership.hpp  particles.hpp  pixel_formats.hpp  post_stack.hpp  render_pipeline.hpp  screen_space_lighting.hpp  shader_types.hpp  shadow_map.hpp  shadow_sampling.hpp  ssao.hpp  texture_atlas.hpp  ui_hud.hpp  ui_menu.hpp  ui_overlay.hpp  uniforms.hpp  vertex.hpp  volumetrics.hpp
include/world/: alpine_morphology.hpp  artifact_analysis.hpp  basin_solver.hpp  biome.hpp  block_properties.hpp  caves.hpp  chest.hpp  chunk.hpp  chunk_generator.hpp  chunk_pos.hpp  climate.hpp  column_plan.hpp  density_field.hpp  features.hpp  fluid.hpp  furnace.hpp  gen_seeds.hpp  generator_v4.hpp  hydrology_authority.hpp  infinite_diffusion_backend.hpp  item.hpp  learned_authority_graph.hpp  learned_terrain.hpp  light_engine.hpp  macro_generation.hpp  mesh_snapshot.hpp  native_hydrology.hpp  noise.hpp  onnxruntime_c_api_v27.hpp  ores.hpp  physical_scale.hpp  recipes.hpp  save_manager.hpp  serialization.hpp  structures.hpp  surface.hpp  surface_material.hpp  terrain.hpp  terrain_bootstrap.hpp  terrain_runtime.hpp  (+7 more)
resources/config/: terrain_model_manifest.json
rycraft_world/: metadata.json
shaders/: atmosphere.metal  bloom.metal  clouds.metal  exposure.metal  lightning.metal  meson.build  particles.metal  pipeline.metal  post.metal  screen_space_lighting.metal  shadow.metal  sky.metal  ssao.metal  ui_overlay.metal  volumetrics.metal
src/: meson.build  trace_summary.cpp  worldgen_inspect.cpp
src/audio/: audio.cpp  audio_engine.mm  meson.build  sfx.cpp  thunder.cpp
src/common/: common.cpp  meson.build  thread_pool.cpp  trace.cpp
src/engine/: camera.cpp  engine.cpp  engine.mm  hotbar.cpp  input.cpp  input.mm  input_bindings.cpp  inventory.cpp  main.cpp  main.mm  meson.build  mining.cpp  slot_interaction.cpp  survival.cpp  v4_world_startup.cpp
src/entity/: ai.cpp  boat.cpp  entity.cpp  entity_picking.cpp  item_entity.cpp  meson.build  physics.cpp  player.cpp  spatial_hash.cpp  spawner.cpp  voxel_traversal.cpp
src/render/: atmosphere.mm  atmospheric_memory.mm  block_texture_array.mm  bloom.mm  boat_renderer.mm  celestial.cpp  cloud_renderer.mm  entity_renderer.mm  far_terrain.cpp  gpu_timer.mm  graphics_settings.cpp  item_entity_renderer.mm  lightning_renderer.mm  lod_mesher.cpp  mega_buffer.mm  mesh_scheduler.cpp  mesher.cpp  meson.build  particles.mm  post_stack.mm  render.cpp  render_pipeline.mm  screen_space_lighting.mm  shadow_map.mm  ssao.mm  texture_atlas.mm  ui_hud.mm  ui_item_icon.mm  ui_menu.cpp  ui_overlay.mm  volumetrics.mm
src/world/: alpine_morphology.cpp  basin_solver.cpp  biome.cpp  caves.cpp  chunk.cpp  chunk_generator.cpp  climate.cpp  column_plan.cpp  density_field.cpp  features.cpp  fluid.cpp  furnace.cpp  hydrology_authority.cpp  infinite_diffusion_backend.cpp  learned_authority_graph.cpp  learned_terrain.cpp  light_engine.cpp  macro_generation.cpp  meson.build  native_hydrology.cpp  noise.cpp  ores.cpp  recipes.cpp  save_manager.cpp  serialization.cpp  structures.cpp  surface.cpp  terrain.cpp  terrain_bootstrap.cpp  terrain_model_transport.mm  terrain_runtime.mm  trees.cpp  weather.cpp  world.cpp  world_list.cpp
subprojects/: .gitkeep
subprojects/lz4-1.10.0/: .meson-subproject-wrap-hash.txt
tests/: meson.build  test_alpine_morphology.mm  test_audio.mm  test_common.mm  test_engine.mm  test_entity.mm  test_fauna_habitat.mm  test_final_field_artifacts.mm  test_fluid_persistence.mm  test_geology_ecology.mm  test_helpers.hpp  test_hydrology_authority.mm  test_items.mm  test_learned_authority_graph.mm  test_learned_terrain.mm  test_lightning.mm  test_macro_control.mm  test_main.cpp  test_main.mm  test_native_hydrology.mm  test_natural_bank_substrate.mm  test_organic_geology.mm  test_recipes.mm  test_relief.mm  test_render.mm  test_render_concurrency.mm  test_reported_water_continuity.mm  test_saves.mm  test_terrain_bootstrap.mm  test_terrain_runtime.mm  test_trace.mm  test_tree_geometry.mm  test_v4_water_antipatterns.mm  test_weather.mm  test_world.mm  test_worldgen_advanced.mm
