world_sources = files(
  'world.cpp',
  'noise.cpp',
  'climate.cpp',
  'weather.cpp',
  'alpine_morphology.cpp',
  'macro_generation.cpp',
  'basin_solver.cpp',
  'column_plan.cpp',
  'density_field.cpp',
  'chunk_generator.cpp',
  'ores.cpp',
  'structures.cpp',
  'features.cpp',
  'chunk.cpp',
  'light_engine.cpp',
  'fluid.cpp',
  'serialization.cpp',
  'learned_terrain.cpp',
  'learned_authority_graph.cpp',
  'hydrology_authority.cpp',
  'native_hydrology.cpp',
  'terrain_bootstrap.cpp',
  'infinite_diffusion_backend.cpp',
  'terrain_model_transport.mm',
  'terrain_runtime.mm',
  'save_manager.cpp',
  'recipes.cpp',
  'furnace.cpp',
  'world_list.cpp',
)

libworld = static_library('world',
  world_sources,
  include_directories : inc,
  dependencies : [appleframeworks, lz4_dep],
)
